--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,4 +17,5 @@
   {% feed_meta %}
 
   <script src="{{ "/assets/js/prefixfree.js" | prepend: site.baseurl }}"></script>
+  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
