--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,3 +27,17 @@ layout: default
   </div>
 </div>
 {% endif %}
+
+<style>
+  table{
+    border-left:1px solid #000000;border-top:1px solid #000000;
+    width: 100%;
+    word-wrap:break-word; word-break:break-all;
+  }
+  table th{
+  text-align:center;
+  }
+  table th,td{
+    border-right:1px solid #000000;border-bottom:1px solid #000000;
+  }
+</style>
